Actions
Bug #14052
closedzsh: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC:
../../sun/io/zs_hdlc.c:187:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] 187 | (int (*)())zsh_wput, /* output put procedure */ | ^ cc1: all warnings being treated as errors
Fix zsh_wput() to return int.
Testing done: build/install/run.
Updated by Electric Monk 10 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 65d1f0742f55ae3c26153e2686e666d5ba1ae17f
commit 65d1f0742f55ae3c26153e2686e666d5ba1ae17f Author: Toomas Soome <tsoome@me.com> Date: 2021-10-12T17:52:41.000Z 14052 zsh: cast between incompatible function types Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Klaus Ziegler <klausz@haus-gisela.de> Approved by: Dan McDonald <danmcd@joyent.com>
Actions