14052 zsh: cast between incompatible function types Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Klaus Ziegler <klausz@haus-gisela.de> Approved by: Dan McDonald <danmcd@joyent.com>